tests/programs/symex/a5-test-cases/pass/symex_loop_pass.rice
// symex --max-steps 10
#[symex]
fn example() {
  loop { () }
}