tests/programs/symex/a5-test-cases/fail/symex_call_fail.rice
// symex
fn add1(x: int) -> int { x + 1 }

#[symex]
fn example(n: int) {
  assert(add1(n) > 0)
}

